fixed layout issues caausing vertical scrollbar

--- a/styles.css
+++ b/styles.css
@@ -17,10 +17,10 @@ body{
 }
 .navBtnContainer{
     width: 100%;
-    height: 20%;
+    height: auto;
     display: flex;
     flex-direction: row;
-    margin: 0 auto;
+    margin: 0 0;
     border-style: none;
     justify-content: space-evenly;
 }
@@ -58,17 +58,18 @@ body{
     border-style: inset;
 }
 #titleBackground{
+    min-height: 100vh;
     background-image: url('images/background.gif');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     border-style: none;
+    overflow: hidden;
 }
 .title{
-    height: 96.2vh;
-    width: auto;
+    width: 100%;
+    height: 80vh;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -78,6 +79,8 @@ body{
     background-image: linear-gradient(to bottom, rgba(54, 34, 34, 92%) 20%, #2b2b2b  100%);
 }
 .contentContainer{
+    height: 100vh;
+    width: 100%;
     background-image: linear-gradient(to bottom, rgba(162, 123, 92, .65)20%, rgba(63, 79, 68, .65) 100%);
 }
 .modal {
